--- a/composer.json
+++ b/composer.json
@@ -18,27 +18,13 @@
     },
     "require-dev": {
         "mustangostang/spyc":           "dev-master",
-        "satooshi/php-coveralls":       "dev-master",
-        "netcommons/auth":              "dev-master",
-        "netcommons/auth-general":      "dev-master",
-        "netcommons/boxes":             "dev-master",
-        "netcommons/blocks":            "dev-master",
-        "netcommons/comments":          "dev-master",
-        "netcommons/containers":        "dev-master",
-        "netcommons/frames":            "dev-master",
-        "netcommons/install":           "dev-master",
-        "netcommons/m17n":              "dev-master",
-        "netcommons/net-commons":       "dev-master",
-        "netcommons/roles":             "dev-master",
-        "netcommons/rooms":             "dev-master",
-        "netcommons/pages":             "dev-master",
-        "netcommons/plugin-manager":    "dev-master",
-        "netcommons/public-space":      "dev-master",
-        "netcommons/users":             "dev-master",
         "netcommons/categories":        "dev-master",
-        "netcommons/tags":              "dev-master",
+        "netcommons/comments":          "dev-master",
         "netcommons/content-comments":  "dev-master",
-        "netcommons/likes":             "dev-master"
+        "netcommons/likes":             "dev-master",
+        "netcommons/net-commons":       "dev-master",
+        "netcommons/tags":              "dev-master",
+        "satooshi/php-coveralls":       "dev-master"
     },
     "license": "NetCommons License",
     "authors": [
