--- a/composer.json
+++ b/composer.json
@@ -4,40 +4,45 @@
     "homepage": "http://www.netcommons.org/",
     "extra": {
         "installer-paths": {
-            "app/Plugin/{$name}": ["type:cakephp-plugin"]
+            "app/Plugin/{$name}": [
+                "type:cakephp-plugin"
+            ]
         }
     },
     "require": {
-        "cakedc/migrations":            "~2.2",
-        "netcommons/categories":        "@dev",
-        "netcommons/content-comments":  "@dev",
-        "netcommons/likes":             "@dev",
-        "netcommons/mails":             "@dev",
-        "netcommons/net-commons":       "@dev",
-        "netcommons/pages":             "@dev",
-        "netcommons/plugin-manager":    "@dev",
-        "netcommons/tags":              "@dev",
-        "netcommons/topics":            "@dev",
-        "netcommons/workflow":          "@dev",
-        "netcommons/wysiwyg":           "@dev"
+        "cakedc/migrations": "~2.2",
+        "netcommons/categories": "@dev",
+        "netcommons/content-comments": "@dev",
+        "netcommons/likes": "@dev",
+        "netcommons/mails": "@dev",
+        "netcommons/net-commons": "@dev",
+        "netcommons/pages": "@dev",
+        "netcommons/plugin-manager": "@dev",
+        "netcommons/tags": "@dev",
+        "netcommons/topics": "@dev",
+        "netcommons/workflow": "@dev",
+        "netcommons/wysiwyg": "@dev"
     },
-    "license": "NetCommons License",
+    "license": "LicenseRef-NetCommons",
+    "license-ref-net-commons": "https://raw.githubusercontent.com/NetCommons3/NetCommons3/master/license.txt",
     "authors": [
         {
-          "name": "Ryuji AMANO (RYUS INC.)",
-          "email": "ryuji@ryus.co.jp",
-          "homepage": "http://ryus.co.jp/",
-          "role": "Developer"
+            "name": "Ryuji AMANO (RYUS INC.)",
+            "email": "ryuji@ryus.co.jp",
+            "homepage": "http://ryus.co.jp/",
+            "role": "Developer"
         },
         {
             "name": "NetCommons Community",
             "homepage": "http://www.netcommons.org"
         }
     ],
-    "type":        "cakephp-plugin",
-    "keywords":    ["cakephp", "blogs"],
+    "type": "cakephp-plugin",
+    "keywords": [
+        "cakephp",
+        "blogs"
+    ],
     "config": {
         "vendor-dir": "vendors"
     }
 }
-
