--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "netcommons/tags":              "dev-master",
         "satooshi/php-coveralls":       "dev-master"
     },
-    "license": "NetCommons License",
+    "license": "LicenseRef-NetCommons",
+    "license-ref-net-commons": "https://raw.githubusercontent.com/NetCommons3/NetCommons3/master/license.txt",
     "authors": [
         {
           "name": "Ryuji AMANO (RYUS INC.)",
